# ModelicaUtilities

./: CMakeLists.txt  MyExternalLibrary.c  MyExternalLibrary.h  README.md
ModelicaExamples/: Callbacks.mo  package.mo
ModelicaExamples/Examples/: ExternalFunctionExample.mo  ExternalObjectExample.mo  MyExternalFunction.bak-mo  package.mo
ModelicaExamples/Examples/Internal/: MyExternalObject.mo  package.mo  package.order
ModelicaServices/ModelicaUtilities/: Callbacks.mo  package.mo  package.order
ModelicaServices/ModelicaUtilities/Resources/Include/: ModelicaUtilityFunctions.c  ModelicaUtilityFunctions.h
ModelicaUtilities/: Callbacks.mo  package.mo  package.order
ModelicaUtilities/Examples/: ExternalFunctionExample.mo  ExternalObjectExample.mo  MyExternalFunction.mo  MyExternalObject.mo  MyExternalObjectFunction.mo  package.order
ModelicaUtilities/Examples/Internal/: MyExternalFunction.mo  MyExternalObjectFunction.mo
ModelicaUtilities/Resources/Include/: ModelicaUtilityFunctions.c  ModelicaUtilityFunctions.h  MyExternalFunction.c  MyExternalObject.c
MyExternalLibrary/: CMakeLists.txt  MyExternalLibrary.c  MyExternalLibrary.h
include/: ModelicaUtilities.h
